# stereo-calibration

./: .gitignore  CMakeLists.txt  CamCalibration.py  README.md  conf.toml  requirements.txt
data/: config.toml
data/inputs/: README.md  findCamIndex.py  readCamera.py  takeImageTwoCameras.py
include/: cameraCalibration.hpp  my_time.hpp
lib/: CamCalibrationFun.py
scripts/: build_opencv.sh
src/: CMakeLists.txt  cameraCalibration.cpp  main.cpp  main2.cpp  my_time.cpp
tools/: requirements.txt  test_by_id.py  test_by_index.py
